--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <img src="assets/images/icons/clear-view-escapes.svg">
-    <a href="#">Get in Touch</a>
+    <a class="btn" href="#">Get in Touch</a>
     <nav>
       <ul>
         <li><a href="#our-beginning">Our Beginning</a></li>
@@ -27,9 +27,9 @@
   <div class="large-hero">
     <img src="assets/images/hero--large.jpg">
     <div class="large-hero__text-content">
-      <h1>Your clarity.</h1>
-      <h2>One trip away.</h2>
-      <p>We create soul restoring journeys that inspire you to be you.</p>
+      <h1 class="large-hero__title">Your clarity.</h1>
+      <h2 class="large-hero__subtitle">One trip away.</h2>
+      <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
       <p><a href="#">Get Started Today</a></p>
     </div>
   </div>
