--- a/app/index.html
+++ b/app/index.html
@@ -153,18 +153,20 @@
     </div>
   </div>
 
-  <div class="page-section page-section--testimonials" id="testimonials">
-    <div class="wrapper">
+  <div class="page-section page-section--testimonials page-section--no-b-padding-until-large" id="testimonials">
+    <div class="wrapper wrapper--no-padding-until-lrage">
       <h2 class="section-title section-title--blue"><img class="section-title__icon"
           src="assets/images/icons/comment.svg"> Real
         <strong>Testimonials</strong></h2>
 
       <div
-        class="row row--gutters row--equal-height-at-medium row--gutters-small row--t-pading generic-content-container">
-        <div class="row__medium-4">
+        class="row row--gutters row--equal-height-at-large row--gutters-small row--t-pading generic-content-container">
+        <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-jane.jpg">
+              <img sizes="160px"
+                srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w"
+                alt="Jane Doe">
             </div>
             <h3 class="testimonial__title">Jane Doe</h3>
             <h4 class="testimonial__subtitle">9 Time Escaper</h4>
@@ -177,10 +179,12 @@
               magna aliqua.&rdquo;</p>
           </div>
         </div>
-        <div class="row__medium-4">
+        <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-john.jpg">
+              <img sizes="160px"
+                srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w"
+                alt="John Smith">
             </div>
             <h3 class="testimonial__title">John Smith</h3>
             <h4 class="testimonial__subtitle">4 Time Escaper</h4>
@@ -191,10 +195,12 @@
               Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
           </div>
         </div>
-        <div class="row__medium-4">
-          <div class="testimonial">
+        <div class="row__large-4">
+          <div class="testimonial testimonial--last">
             <div class="testimonial__photo">
-              <img src="assets/images/testimonial-cat.jpg">
+              <img sizes="160px"
+                srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w,"
+                alt="Cat McKitty">
             </div>
             <h3 class="testimonial__title">Cat McKitty</h3>
             <h4 class="testimonial__subtitle">6 Time Escaper</h4>
